@@ -1,3 +1,4 @@
+* Add resources method to ModelStorage
 * BUG#9502 Don't auto_uninstall modules
 
 Version 4.6.3 - 2018-03-01
